--- a/index.html
+++ b/index.html
@@ -1,4 +1,75 @@
-<!-- 1:11:30 -->
-<canvas></canvas>
+<!-- 1:34:30 -->
+<head>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+  </style>
+</head>
+<body>
+  <!--red container div-->
+  <div style="position: relative; display: inline-block">
+    <!--small red container div-->
+    <div
+      style="
+        position: absolute;
+        display: flex;
+        width: 100%;
+        align-items: center;
+        padding: 20px;
+      "
+    >
+      <!--Player health-->
+      <div
+        style="
+          position: relative;
+          height: 30px;
+          width: 100%;
+          display: flex;
+          justify-content: flex-end;
+        "
+      >
+        <div style="background-color: yellow; height: 30px; width: 100%"></div>
+        <div
+          id="playerHealth"
+          style="
+            position: absolute;
+            background: blue;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+          "
+        ></div>
+      </div>
+      <!--Timer-->
+      <div
+        style="
+          background-color: red;
+          width: 100px;
+          height: 100px;
+          flex-shrink: 0;
+        "
+      ></div>
+      <!--Enemy health-->
+      <div style="position: relative; height: 30px; width: 100%">
+        <div style="background-color: yellow; height: 30px"></div>
+        <div
+          id="enemyHealth"
+          style="
+            position: absolute;
+            background: blue;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+          "
+        ></div>
+      </div>
+      <div></div>
+    </div>
+    <canvas></canvas>
+  </div>
 
-<script src="index.js"></script>
+  <script src="index.js"></script>
+</body>
